# pippy

./: .gitignore  404.html  Makefile  README.md  api.html  getting-started.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  test.ipynb
.github/: ci_cd.yaml  pr.yaml
.github/workflows/: ci_cd.yaml  common.yaml  main.yaml  pr.yaml
docs/: api.md  generate_api_docs.py  getting-started.md  index.md
docs/examples/: basic-usage.md
examples/: basic-usage.html
pippy/: __init__.py  aux.py  auxiliary.py  cache.py  constants.py  exceptions.py  logger.py  server.py  stats.py  utils.py
search/: search_index.json
tests/: test_api_availability.py  test_basic_functionality.py  test_caching.py  test_debug_mode.py  test_error_handling.py
