[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pippy"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A Python package for accessing the World Bank's Poverty and Inequality Platform (PIP) API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "jupyter",
    "nbconvert",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pippy"
"Bug Tracker" = "https://github.com/yourusername/pippy/issues"